--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,18 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^122.0.0",
+    "jsdom": "^22.1.0",
+    "jsonwebtoken": "^9.0.1",
+    "marked": "^5.1.1",
+    "marked-gfm-heading-id": "^3.0.4",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "slugify": "^1.6.6"
   },
   "scripts": {
     "start": "nodemon index.js"
