--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -14,7 +15,8 @@
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "nodemon index.js"
