--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "marked-gfm-heading-id": "^3.0.4",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
     "uuid": "^9.0.0"
