--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.8.0",
     "googleapis": "^122.0.0",
     "jsdom": "^22.1.0",
     "jsonwebtoken": "^9.0.1",
