--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.7.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -19,6 +20,7 @@
     "mongoose": "^7.3.4",
     "multer": "^1.4.4-lts.1",
     "multer-gridfs-storage": "^5.0.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
     "uuid": "^9.0.0"
